--- a/src/main/resources/assets/botanicaladdons/lang/en_US.lang
+++ b/src/main/resources/assets/botanicaladdons/lang/en_US.lang
@@ -1,2 +1,3 @@
 item.botanicaladdons:emblemNjord.name=Priestly Emblem: Njord
 item.botanicaladdons:emblemIdunn.name=Priestly Emblem: Idunn
+item.botanicaladdons:emblemThor.name=Priestly Emblem: Thor
