--- a/src/main/resources/assets/botanicaladdons/lang/en_US.lang
+++ b/src/main/resources/assets/botanicaladdons/lang/en_US.lang
@@ -8,7 +8,7 @@ item.botanicaladdons:emblemThor.angry=You feel the skies rumbling with Thor's ra
 item.botanicaladdons:holySymbol.name=Holy Symbol
 item.botanicaladdons:holySymbol.potato.name=Tiny Headtato
 item.botanicaladdons:holySymbol.catalyst.name=Curse of the Catalyst
-item.botanicaladdons:holySymbol.mask.name=Gaterender's Mask
+item.botanicaladdons:holySymbol.heart.name=Crystalline Heart
 item.botanicaladdons:holySymbol.tail.name=Fox Tail
 item.botanicaladdons:holySymbol.teru.name=Chesteru Teru Bozu
 
