add a blank potions.png and the name for the category

--- a/src/main/resources/assets/botanicaladdons/lang/en_US.lang
+++ b/src/main/resources/assets/botanicaladdons/lang/en_US.lang
@@ -18,6 +18,10 @@ botanicaladdons.potion.drab=Drab Vision
 botanicaladdons.potion.overcharged=Overcharged
 botanicaladdons.potion.featherweight=Featherweight
 
+
+botanicaladdons.category.divinity=Divinity
+
+
 botanicaladdons.entry.holySymbol=Divine Faith
 botanicaladdons.tagline.holySymbol=Kneel before the gods
 botanicaladdons.page.holySymbol0=Traces of divine work are evident in this world. &4Mana&0, for one. The stuff of magic can't possibly be made by mortal hand. The question, then, is how to connect with these gods. However, it might be possible, even with mundane materials.
