add models for mjolnir and the mortalstone

--- a/src/main/resources/assets/botanicaladdons/lang/en_US.lang
+++ b/src/main/resources/assets/botanicaladdons/lang/en_US.lang
@@ -28,6 +28,8 @@ item.botanicaladdons:iconBifrostSphere.name=Wave of Bifrost
 item.botanicaladdons:iconIronroot.name=Shield of Roots
 item.botanicaladdons:iconLifemaker.name=Life Catalyst
 
+item.botanicaladdons:iconSuffusion.name=Soul Combination
+
 item.botanicaladdons:spellFocus.name=Terrestrial Focus
 
 item.botanicaladdons:gaiaKiller.name=Slayer of Guardians
