--- a/src/main/resources/assets/botanicaladdons/lang/en_US.lang
+++ b/src/main/resources/assets/botanicaladdons/lang/en_US.lang
@@ -11,6 +11,7 @@ item.botanicaladdons:emblemHeimdall.angry=You feel colors bleed out of the world
 
 item.botanicaladdons:dagger.name=Duelist's Dagger
 item.botanicaladdons:mjolnir.name=Mjolnir the Crusher
+item.botanicaladdons:appleImmortality.name=Apple of Immortality
 
 item.botanicaladdons:mortalStone.name=Mortalstone
 
