--- a/src/main/resources/assets/botanicaladdons/lang/en_US.lang
+++ b/src/main/resources/assets/botanicaladdons/lang/en_US.lang
@@ -34,6 +34,41 @@ item.botanicaladdons:iconSuffusion.name=Soul Combination
 
 item.botanicaladdons:spellFocus.name=Terrestrial Focus
 
+
+item.botanicaladdons:dyeShardWhite.name=White Iridescent Shard
+item.botanicaladdons:dyeShardOrange.name=Orange Iridescent Shard
+item.botanicaladdons:dyeShardMagenta.name=Magenta Iridescent Shard
+item.botanicaladdons:dyeShardLightBlue.name=Light Blue Iridescent Shard
+item.botanicaladdons:dyeShardYellow.name=Yellow Iridescent Shard
+item.botanicaladdons:dyeShardLime.name=Lime Iridescent Shard
+item.botanicaladdons:dyeShardPink.name=Pink Iridescent Shard
+item.botanicaladdons:dyeShardGray.name=Gray Iridescent Shard
+item.botanicaladdons:dyeShardSilver.name=Light Gray Iridescent Shard
+item.botanicaladdons:dyeShardCyan.name=Cyan Iridescent Shard
+item.botanicaladdons:dyeShardPurple.name=Purple Iridescent Shard
+item.botanicaladdons:dyeShardBlue.name=Blue Iridescent Shard
+item.botanicaladdons:dyeShardBrown.name=Brown Iridescent Shard
+item.botanicaladdons:dyeShardGreen.name=Green Iridescent Shard
+item.botanicaladdons:dyeShardRed.name=Red Iridescent Shard
+item.botanicaladdons:dyeShardBlack.name=Black Iridescent Shard
+
+item.botanicaladdons:irisDyeWhite.name=White Iridescent Crystal
+item.botanicaladdons:irisDyeOrange.name=Orange Iridescent Crystal
+item.botanicaladdons:irisDyeMagenta.name=Magenta Iridescent Crystal
+item.botanicaladdons:irisDyeLightBlue.name=Light Blue Iridescent Crystal
+item.botanicaladdons:irisDyeYellow.name=Yellow Iridescent Crystal
+item.botanicaladdons:irisDyeLime.name=Lime Iridescent Crystal
+item.botanicaladdons:irisDyePink.name=Pink Iridescent Crystal
+item.botanicaladdons:irisDyeGray.name=Gray Iridescent Crystal
+item.botanicaladdons:irisDyeSilver.name=Light Gray Iridescent Crystal
+item.botanicaladdons:irisDyeCyan.name=Cyan Iridescent Crystal
+item.botanicaladdons:irisDyePurple.name=Purple Iridescent Crystal
+item.botanicaladdons:irisDyeBlue.name=Blue Iridescent Crystal
+item.botanicaladdons:irisDyeBrown.name=Brown Iridescent Crystal
+item.botanicaladdons:irisDyeGreen.name=Green Iridescent Crystal
+item.botanicaladdons:irisDyeRed.name=Red Iridescent Crystal
+item.botanicaladdons:irisDyeBlack.name=Black Iridescent Crystal
+
 item.botanicaladdons:gaiaKiller.name=Slayer of Guardians
 
 itemGroup.botanicaladdons=Natural Pledge
